# SoftwareChallenge

./: .gitignore  BUILDING.md  CMakeLists.txt  DOCUMENTATION.md  ENVIRONMENT.md  PRESENTATION.md  README.md  TESTING.md
data/: test00.txt  test01.txt  test02.txt  test03.txt  test05.txt
doc/: CMakeLists.txt  Doxyfile.in  index.html
extra/webhook_receiver/: main.go  webhook_receiver.service
images/: divide_and_conquer.uml  graph.uml
include/: commandline.hpp  data_structure.hpp  data_structure_basic.hpp  data_structure_graph.hpp  data_structure_member.hpp  data_structure_name2index.hpp  file.h  file.hpp  graph_algorithm.hpp  main.hpp  preprocess.hpp
src/: CMakeLists.txt  commandline.cpp  data_path.in  data_structure.cpp  data_structure_basic.cpp  data_structure_graph.cpp  data_structure_member.cpp  data_structure_name2index.cpp  file.c  file.cpp  graph_algorithm.cpp  main.cpp  preprocess.cpp  version.in
test/: CMakeLists.txt  test00.cpp  test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp
